// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExtractorRegistry returns error result from extractor 1`] = `[]`;

exports[`ExtractorRegistry returns external URLs if enabled by config 1`] = `
[
  {
    "isExternal": true,
    "label": "mixdrop.ag",
    "meta": {
      "countryCode": "de",
    },
    "sourceId": "external_de",
    "ttl": 3600000,
    "url": "https://mixdrop.ag/e/3nzwveprim63or6",
  },
]
`;

exports[`ExtractorRegistry returns external url for error 1`] = `
[
  {
    "error": [Error: Fetcher error: 403: Forbidden
],
    "isExternal": true,
    "label": "dropload.io",
    "meta": {
      "countryCode": "de",
    },
    "sourceId": "dropload",
    "url": "https://dropload.io/mocked-blocked.html",
  },
]
`;

exports[`ExtractorRegistry returns external url for error with title 1`] = `
[
  {
    "error": [Error: Fetcher error: 403: Forbidden
],
    "isExternal": true,
    "label": "dropload.io",
    "meta": {
      "countryCode": "de",
      "title": "a title!",
    },
    "sourceId": "dropload",
    "url": "https://dropload.io/mocked-blocked-2.html",
  },
]
`;
